implement `DELETE /api/customers/<customer_id>/purchases/<purchase_id>` (#41)
